updated swagger.yaml and minor issues
